# minecraftrouter

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  go.mod  go.sum  pyproject.toml  routing.json  shell.nix
.github/workflows/: build.yml  linting.yml  main.yml  pull_request.yml  testbuild.yml
cmd/: minecraftrouter.go
cmd/minecraftrouter/: minecraftrouter.go
cmd/minecraftstats/: minecraftstats.go
pkg/: proxy.go  resolver.go  router.go
pkg/minecraft_protocol/: reader.go  readwriter.go  writer.go
pkg/reader/: minecraft_reader.go
pkg/resolver/: api_resolver.go  json_resolver.go  resolver.go
router/: __main__.py  config.py  minecraft_protocol.py
